--- a/Intro pandas/pandas.ipynb
+++ b/Intro pandas/pandas.ipynb
@@ -874,10 +874,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title\n",
+      "Mr          398\n",
+      "Miss        146\n",
+      "Mrs         108\n",
+      "Master       36\n",
+      "Dr            6\n",
+      "Rev           6\n",
+      "Col           2\n",
+      "Major         2\n",
+      "Mlle          2\n",
+      "Capt          1\n",
+      "Sir           1\n",
+      "Mme           1\n",
+      "Don           1\n",
+      "Ms            1\n",
+      "Jonkheer      1\n",
+      "Countess      1\n",
+      "Lady          1\n",
+      "Name: count, dtype: int64\n",
+      "     passenger_id                                     name     sex   age  \\\n",
+      "3             267                Panula, Mr. Ernesti Arvid    male  16.0   \n",
+      "63            550           Davies, Master. John Morgan Jr    male   8.0   \n",
+      "65            851  Andersson, Master. Sigvard Harald Elias    male   4.0   \n",
+      "74             51               Panula, Master. Juha Niilo    male   7.0   \n",
+      "101           298             Allison, Miss. Helen Loraine  female   2.0   \n",
+      "..            ...                                      ...     ...   ...   \n",
+      "689           194               Navratil, Master. Michel M    male   3.0   \n",
+      "695           789               Dean, Master. Bertram Vere    male   1.0   \n",
+      "697           481           Goodwin, Master. Harold Victor    male   9.0   \n",
+      "703           172                     Rice, Master. Arthur    male   4.0   \n",
+      "707           173             Johnson, Miss. Eleanor Ileen  female   1.0   \n",
+      "\n",
+      "    education marital_status relationship  class      fare  sibsp  ...  \\\n",
+      "3     Unknown        Unknown      Unknown      3   39.6875      4  ...   \n",
+      "63    Unknown        Unknown      Unknown      2   36.7500      1  ...   \n",
+      "65    Unknown        Unknown      Unknown      3   31.2750      4  ...   \n",
+      "74    Unknown        Unknown      Unknown      3   39.6875      4  ...   \n",
+      "101   Unknown        Unknown      Unknown      1  151.5500      1  ...   \n",
+      "..        ...            ...          ...    ...       ...    ...  ...   \n",
+      "689   Unknown        Unknown      Unknown      2   26.0000      1  ...   \n",
+      "695   Unknown        Unknown      Unknown      3   20.5750      1  ...   \n",
+      "697   Unknown        Unknown      Unknown      3   46.9000      5  ...   \n",
+      "703   Unknown        Unknown      Unknown      3   29.1250      4  ...   \n",
+      "707   Unknown        Unknown      Unknown      3   11.1333      1  ...   \n",
+      "\n",
+      "     workclass occupation hours_per_week capital_gain capital_loss  \\\n",
+      "3      Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "63     Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "65     Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "74     Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "101    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "..         ...        ...            ...          ...          ...   \n",
+      "689    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "695    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "697    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "703    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "707    Unknown    Unknown        39.7443          0.0          0.0   \n",
+      "\n",
+      "     native_country     income  survived   title   group_age  \n",
+      "3           Unknown  no income         0      Mr  adolescent  \n",
+      "63          Unknown  no income         1  Master         kid  \n",
+      "65          Unknown  no income         0  Master         kid  \n",
+      "74          Unknown  no income         0  Master         kid  \n",
+      "101         Unknown  no income         0    Miss        baby  \n",
+      "..              ...        ...       ...     ...         ...  \n",
+      "689         Unknown  no income         1  Master         kid  \n",
+      "695         Unknown  no income         1  Master        baby  \n",
+      "697         Unknown  no income         0  Master         kid  \n",
+      "703         Unknown  no income         0  Master         kid  \n",
+      "707         Unknown  no income         1    Miss        baby  \n",
+      "\n",
+      "[61 rows x 23 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercice 9\n",
+    "\n",
+    "# Créez une nouvelle colonne \"title\" qui extrait le titre du nom de chaque passager\n",
+    "SeaCareerSet['title'] = SeaCareerSet['name'].str.extract(' ([A-Za-z]+)\\.', expand=False)\n",
+    "\n",
+    "\n",
+    "# Explorez la distribution des titres et analysez s'il y a des titres rares ou des erreurs\n",
+    "distribution_titres = SeaCareerSet['title'].value_counts()\n",
+    "print(distribution_titres)\n",
+    "\n",
+    "\n",
+    "# Créez une nouvelle colonne appelée \"group_age\" dans le DataFrame\n",
+    "def groupe_age(age):\n",
+    "    if age <= 2:\n",
+    "        return 'baby'\n",
+    "    elif 3 <= age <= 11:\n",
+    "        return 'kid'\n",
+    "    elif 12 <= age <= 17:\n",
+    "        return 'adolescent'\n",
+    "    else:\n",
+    "        return 'adult'\n",
+    "\n",
+    "SeaCareerSet['group_age'] = SeaCareerSet['age'].apply(groupe_age)\n",
+    "\n",
+    "\n",
+    "# Affichez les passagers mineurs où les colonnes sibsp et parch sont différentes de zéro. Analysez ces cas et évaluez leur cohérence\n",
+    "passagers_mineurs = SeaCareerSet[(SeaCareerSet['age'] < 18) & (SeaCareerSet['sibsp'] != 0) & (SeaCareerSet['parch'] != 0)]\n",
+    "print(passagers_mineurs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercice 10\n",
+    "\n",
+    "# Calculez la corrélation entre l'âge et le tarif payé par les passagers\n",
+    "correlation_age_tarif = SeaCareerSet['age'].corr(SeaCareerSet['fare'])\n",
+    "\n",
+    "\n",
+    "# Créez une nouvelle colonne appelée \"family_size\" représentant la taille de la famille a bord pour un passager\n",
+    "SeaCareerSet['family_size'] = SeaCareerSet['sibsp'] + SeaCareerSet['parch'] + 1\n",
+    "\n",
+    "\n",
+    "# Analysez la corrélation entre la taille de la famille et le fait de survivre\n",
+    "correlation_taille_famille_survie = SeaCareerSet['family_size'].corr(SeaCareerSet['survived'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_embarked      Friday     Monday\n",
+      "class sex                           \n",
+      "1.0   female   108.846749  83.333333\n",
+      "      male      70.954209  90.000000\n",
+      "2.0   female    22.082592  12.350000\n",
+      "      male      21.202551  12.350000\n",
+      "3.0   female    16.448597  10.601670\n",
+      "      male      12.035301  14.337500\n",
+      "Tarif moyen est le plus élevé :\n",
+      "\t - Classe : 1.0\n",
+      "\t - Sexe : female\n",
+      "\t - Jour d'embarcation : Friday\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercice 11\n",
+    "\n",
+    "# Convertissez date d’embarquement au bon format\n",
+    "PassengerComplet['date_embarked'] = pd.to_datetime(PassengerComplet['date_embarked'])\n",
+    "\n",
+    "\n",
+    "# Extrayez l’heure d’embarquement a partir de cette colonne\n",
+    "heure_embarquement = PassengerComplet['date_embarked'].dt.hour\n",
+    "\n",
+    "\n",
+    "# Créez une DataFrame pivot montrant la moyenne des tarifs payés par classe, sexe et jour d’embarcation\n",
+    "pivot_tarifs = PassengerComplet.pivot_table(values='fare', index=['class', 'sex'], columns=PassengerComplet['date_embarked'].dt.day_name(), aggfunc='mean')\n",
+    "print(pivot_tarifs)\n",
+    "\n",
+    "\n",
+    "# Identifiez la classe, le sexe et le jour d’embarcation où le tarif moyen est le plus élevé\n",
+    "jour_max = pivot_tarifs.max().idxmax()\n",
+    "classe_max = pivot_tarifs.idxmax()[jour_max][0]\n",
+    "sexe_max = pivot_tarifs.idxmax()[jour_max][1]\n",
+    "\n",
+    "print(\"Tarif moyen est le plus élevé :\")\n",
+    "print(\"\\t - Classe :\", classe_max)\n",
+    "print(\"\\t - Sexe :\", sexe_max)\n",
+    "print(\"\\t - Jour d'embarcation :\", jour_max)"
+   ]
   }
  ],
  "metadata": {
